@@ -25,6 +25,7 @@ can then iterate over a channel group, which yields all channels for a given gro
 loaded again when reading in the Detector from a nur file
 
 bugfixes:
+- Fixed bug in get_travel_time in directRayTracing propagation module
 
 version 2.2.1
 bugfixes:
